[package]
name = "irsim-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
path = "src/lib.rs"


[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop= "0.20.0"

[[bin]]
name = "irsim-cli"
path = "src/bin/cli/main.rs"
